# chandan_aiops

./: MANIFEST.in  README.md  main.py  pyproject.toml  setup.py  template.py
chandan_aiops/: __init__.py  cli.py
chandan_aiops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
chandan_aiops/templates/: visualize.py
chandan_aiops/templates/aiops_project/: config.py  dvc.yaml  params.yaml
chandan_aiops/templates/aiops_project/research/: ANN_model.ipynb  model.ipynb
chandan_aiops/templates/aiops_project/src/: data_ingestion.py  data_preprocessing.py  logger.py  model_builder.py  model_evaluator.py  model_predictor.py  visualize.py
