[project]
name = "chandan-aiops"
version = "1.5.3"
description = "Enterprise-ready MLOps project generator with DVC-first pipelines"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Chandan Chaudhari" }]
requires-python = ">=3.9"

keywords = [
  "mlops",
  "aiops",
  "dvc",
  "machine-learning",
  "pipeline",
  "project-template"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
  "rich>=13.7.0"
]

[project.scripts]
chandan-aiops = "chandan_aiops.cli:app"
aiops-create = "chandan_aiops.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
